infra/modules/ec2/main.tf
data "aws_ami" "ubuntu" {
  most_recent = true
  owners      = ["099720109477"] # Canonical (Ubuntu)

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }
}


# Generate SSH key


resource "tls_private_key" "ssh_key" {
  algorithm = "RSA"
  rsa_bits  = 4096
}

resource "aws_key_pair" "generated" {
  key_name   = "${var.name}-key"
  public_key = tls_private_key.ssh_key.public_key_openssh
}

# Save private key locally
resource "local_file" "private_key" {
  content         = tls_private_key.ssh_key.private_key_pem
  filename        = "${path.root}/${aws_key_pair.generated.key_name}.pem"
  file_permission = "0600"
}

# Security Group
resource "aws_security_group" "this" {
  name        = "${var.name}-sg"
  description = "Security group for ${var.name}"
}

# SSH
resource "aws_vpc_security_group_ingress_rule" "ssh" {
  security_group_id = aws_security_group.this.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 22
  to_port           = 22
  ip_protocol       = "tcp"
}

# App Port
resource "aws_vpc_security_group_ingress_rule" "app" {
  security_group_id = aws_security_group.this.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 5000
  to_port           = 5000
  ip_protocol       = "tcp"
}

# Jenkins Port
# resource "aws_vpc_security_group_ingress_rule" "jenkins" {
#   count             = var.enable_jenkins ? 1 : 0
#   security_group_id = aws_security_group.this.id
#   cidr_ipv4         = "0.0.0.0/0"
#   from_port         = 8080
#   to_port           = 8080
#   ip_protocol       = "tcp"
# }

# Prometheus
# resource "aws_vpc_security_group_ingress_rule" "prometheus" {
#   security_group_id = aws_security_group.this.id
#   cidr_ipv4         = "0.0.0.0/0"
#   from_port         = 9090
#   to_port           = 9090
#   ip_protocol       = "tcp"
# }

# Grafana
resource "aws_vpc_security_group_ingress_rule" "grafana" {
  security_group_id = aws_security_group.this.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 3000
  to_port           = 3000
  ip_protocol       = "tcp"
}

# Allow all outbound
resource "aws_vpc_security_group_egress_rule" "all" {
  security_group_id = aws_security_group.this.id
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
}

resource "aws_vpc_security_group_ingress_rule" "node_exporter" {
  security_group_id = aws_security_group.this.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 9100
  to_port           = 9100
  ip_protocol       = "tcp"
}

# EC2 Instance
resource "aws_instance" "this" {
  ami                    = data.aws_ami.ubuntu.id
  instance_type          = "t3.micro"
  key_name               = aws_key_pair.generated.key_name
  vpc_security_group_ids = [aws_security_group.this.id]

  tags = {
    Name = var.name
    Role = var.name
  }
}
